# eosio-rust-api

./: .gitignore  .gitmodules  Cargo.toml  README.md
eosio-api/: Cargo.toml  README.md
eosio-api/examples/: tictactoe.rs
eosio-api/src/: abi.rs  api_types.rs  errors.rs  json_rpc.rs  lib.rs  numeric.rs  serialize.rs  wallet_types.rs  wasm.rs
eosio-api/test/: good-2.wasm  good.wasm
eosio-client-api/: CHANGELOG.md  Cargo.toml  README.md  default.env
eosio-client-api/examples/: tictactoe.rs  tictactoe.wasm
eosio-client-api/src/: abi.rs  api_types.rs  errors.rs  json_rpc.rs  lib.rs  numeric.rs  wallet_types.rs  wasm.rs
eosio-client-api/test/: good-2.abi  good-2.wasm  setup_chain.sh
eosio-client-keys/: Cargo.toml  LICENSE.md  README.md
eosio-client-keys/src/: errors.rs  hash.rs  key_utils.rs  lib.rs
eosio-keys/: Cargo.toml
eosio-keys/src/: errors.rs  key_utils.rs  lib.rs
libabieos-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libabieos-sys/lib/: abieos.patch
libabieos-sys/resources/: abi_rv.abi.json
libabieos-sys/src/: bindings.rs  encodeABI.rs  errors.rs  lib.rs
libabieos-sys/test/: good-2.abi
src/: errors.rs  main.rs
