[package]
name="eosio-client"
version="0.1.5"
authors = ["Ian Holsman <ian@holsman.com.au>"]
edition = "2018"
license = "Apache-2.0"
description="sample client utilizing EOSIO API"
readme = "README.md"
homepage="https://github.com/kryton/eosio-rust-api/"
repository = "https://github.com/kryton/eosio-rust-api/"
keywords = ["eosio", "blockchain"]
categories = ["api-bindings"]

[workspace]
members = [
    "eosio-client-api",
    "eosio-client-keys",
    "libabieos-sys",
]
exclude = [

]

[dependencies]
eosio-client-api= {path = "eosio-client-api", version="0.2.1"}
eosio-client-keys = {path = "eosio-client-keys", version="0.1.0"}
error-chain = "0.12.2"
tokio = {version = "0.2.21", features=["rt-threaded", "macros"] }
