[package]
name = "eosio-client-api"
version = "0.1.3"
authors = ["Ian Holsman <ian@holsman.com.au>"]
edition = "2018"
license = "Apache-2.0"
description="EOSIO API to communicate to EOSIO nodeos software"
readme = "README.md"
homepage = "https://github.com/kryton/eosio-rust-api/tree/master/eosio-client-api"
repository = "https://github.com/kryton/eosio-rust-api/"
keywords = ["eosio", "blockchain"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eosio-client-keys = { path = "../eosio-client-keys", version="0.1.0"}
libabieos-sys = { path = "../libabieos-sys" , version="0.2"}
lazy_static = "1.4.0"
bs58 = "0.3.1"
base64 = "0.12.1"
ripemd160 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.5.1"
reqwest={ version = "0.10.4", features = ["blocking", "json"] }
error-chain = "0.12.2"
chrono="0.4.11"
