[package]
name = "eosio-keys"
version = "0.1.0"
authors = ["Ian Holsman <ian@holsman.com.au>"]
edition = "2018"
license = "Apache-2.0"
description="EOSIO Key/Signature handling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#uint="0.8.3"
hmac="0.7.1"
crypto-hashes = "0.7.0"
sha2="0.8.1"
ripemd160 = "0.8.0"
lazy_static = "1.4.0"
rand="0.7.3"
bs58 = "0.3.1"
secp256k1 = "0.17.2"
regex="1.3.7"
error-chain = "0.12.2"
