[package]
name = "libabieos-sys"
version = "0.3.7"
authors = ["Ian Holsman <ian@holsman.com.au>"]
edition = "2018"
build="build.rs"
readme="README.md"
homepage = "https://github.com/kryton/eosio-rust-api/tree/master/libabieos-sys"
repository = "https://github.com/kryton/eosio-rust-api/"
keywords = ["eosio", "blockchain"]
categories = ["api-bindings"]
license = "Apache-2.0"
description="EOSIO abieos rust bindings"
documentation="https://docs.rs/libabieos-sys/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# add
# +install(TARGETS abieos DESTINATION .)
# to the bottom of CMakelists in lib/abieos/
# $ cargo install bindgen
# $  export LLVM_CONFIG_PATH="/usr/local/Cellar/llvm@8/8.0.1_1/bin/llvm-config"
# $  bindgen lib/abieos/src/abieos.h -o src/bindings.rs
# for bindgen to work
#
#  export LLVM_CONFIG_PATH="/usr/local/Cellar/llvm@8/8.0.1_1/bin/llvm-config"
#
# note: on linux you may need to re-enable the -lstdc++ in build.rs

[dependencies]
error-chain = "0.12.2"
regex="1.3"
lazy_static = "1.4.0"
rust-embed = "5.5.1"
chrono="0.4.11"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cmake = "0.1"
sys-info="0.8"
